[package]
name = "cpu_intel_8080_emulator"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Quentin MOREL (Im-Rises) <quentin-morel88@hotmail.com>"]
description = "CPU Intel 8080 Emulator"
repository = "https:://github.com/Im-Rises/cpu_intel_8080_emulator"
documentation = "https:://github.com/Im-Rises/cpu_intel_8080_emulator"
readme = "README.md"
keywords = ["cpu", "intel8080", "emulator"]
categories = ["emulators"]
